--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.12",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "webpack-cli": "^5.1.4"
   }
 }
