--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.23.2",
+    "@prisma/client": "^5.1.1",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-icons": "^1.3.0",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.12",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "prisma": "^5.1.1"
   }
 }
