--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/supabase-js": "^2.32.0",
     "@types/chroma-js": "^2.4.0",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@types/react-lottie": "^1.2.6",
+    "@types/uuid": "^9.0.2",
     "autoprefixer": "10.4.14",
     "chroma-js": "^2.4.2",
     "class-variance-authority": "^0.7.0",
@@ -34,6 +36,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-lottie": "^1.2.3",
@@ -41,7 +44,8 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.12",
