--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^10.15.0",
     "next": "13.4.12",
     "next-themes": "^0.2.1",
+    "node-fetch": "^3.3.2",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
