--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.32.0",
+    "@tanstack/react-query": "^4.32.6",
     "@types/chroma-js": "^2.4.0",
     "@types/node": "20.4.6",
     "@types/react": "18.2.18",
