made some major changes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "app/api/addToStorage/route.js"
+    "app/api/addToStorage/route.ts"
   ],
   "exclude": [
     "node_modules"
