--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
+    "tesseract.js": "^4.1.1",
     "typescript": "5.1.6",
     "uuid": "^9.0.0"
   },
