--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react-intersection-observer": "^9.5.2",
     "react-lottie": "^1.2.3",
     "react-responsive": "^9.0.2",
+    "slate": "^0.94.1",
+    "slate-react": "^0.98.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
