--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-lottie": "^1.2.3",
+    "react-quill": "^2.0.0",
     "react-responsive": "^9.0.2",
     "slate": "^0.94.1",
     "slate-react": "^0.98.1",
